RESOLVED FIXED162662
[EFL] Fix debug build break since r206481
https://bugs.webkit.org/show_bug.cgi?id=162662
Summary [EFL] Fix debug build break since r206481
Joonghun Park
Reported 2016-09-27 23:45:24 PDT
Fix the debug build error below. In file included from ../../Source/WTF/wtf/StdLibExtras.h:33:0, from ../../Source/WTF/wtf/FastMalloc.h:26, from ../../Source/WebCore/config.h:75, from ../../Source/WebCore/platform/graphics/BitmapImage.cpp:27: ../../Source/WebCore/platform/graphics/BitmapImage.cpp: In member function ‘virtual void WebCore::BitmapImage::draw(WebCore::GraphicsContext&, const WebCore::FloatRect&, const WebCore::FloatRect&, WebCore::CompositeOperator, WebCore::BlendMode, WebCore::ImageOrientationDescription)’: ../../Source/WTF/wtf/Assertions.h:394:68: error: format ‘%d’ expects argument of type ‘int’, but argument 4 has type ‘WebCore::SubsamplingLevel’ [-Werror=format=] #define LOG(channel, ...) WTFLog(&LOG_CHANNEL(channel), __VA_ARGS__) ^ ../../Source/WebCore/platform/graphics/BitmapImage.cpp:158:5: note: in expansion of macro ‘LOG’ LOG(Images, "BitmapImage %p draw - subsamplingLevel %d at scale %.4f", this, subsamplingLevel, scale); ^ cc1plus: all warnings being treated as errors
Attachments
Joonghun Park
Comment 1 2016-09-27 23:47:45 PDT
Note You need to log in before you can comment on or make changes to this bug.