[EFL] Fix debug build break since r206481. Unreviewed https://bugs.webkit.org/show_bug.cgi?id=162662

No new tests, no new behaviours.

* platform/graphics/BitmapImage.cpp:
(WebCore::BitmapImage::draw):

Canonical link: https://commits.webkit.org/180601@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206502 268f45cc-cd09-0410-ab3c-d52691b4dbfc